# ABCD

./: .gitignore  ABCD.sln  Cargo.toml  Claude_sec_review.md  DDS-Design-Document.md  DDS-Implementation-Whitepaper.md  Dummies-Guide-to-DDS.md  README.md  STATUS.md  security-gaps.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  cli.yml  loadtest-smoke.yml  msi.yml  pkg.yml
bindings/c/: dds.h
bindings/csharp/: DDS.cs  DDSTests.cs
bindings/python/: dds.py  test_dds.py
bindings/swift/Sources/DDS/: DDS.swift
dds-cli/: Cargo.toml
dds-cli/src/: audit_format.rs  client.rs  dump.rs  main.rs
dds-cli/tests/: smoke.rs
dds-core/: Cargo.toml
dds-core/benches/: crdt_merge.rs  crypto_verify.rs  policy_eval.rs
dds-core/src/: audit.rs  cbor_bounded.rs  cbor_canonical.rs  envelope.rs  identity.rs  lib.rs  policy.rs  token.rs  trust.rs
dds-core/src/crdt/: causal_dag.rs  lww_register.rs  mod.rs  twop_set.rs
dds-core/src/crypto/: classical.rs  ecdsa.rs  epoch_key.rs  hybrid.rs  kem.rs  mod.rs  traits.rs  triple_hybrid.rs
dds-core/tests/: integration.rs
dds-domain/: Cargo.toml
dds-domain/src/: domain.rs  fido2.rs  lib.rs  types.rs
dds-domain/tests/: domain_tests.rs
dds-ffi/: Cargo.toml
dds-ffi/src/: ffi_core.rs  lib.rs
dds-fido2-test/: Cargo.toml  README.md
dds-fido2-test/src/: main.rs
dds-loadtest/: Cargo.toml  README.md
dds-loadtest/src/: harness.rs  main.rs  metrics.rs  report.rs  workload.rs
dds-net/: Cargo.toml
dds-net/src/: admission.rs  discovery.rs  gossip.rs  lib.rs  pq_envelope.rs  sync.rs  transport.rs
dds-node/: Cargo.toml  build.rs
dds-node/benches/: session_lifecycle.rs
dds-node/src/: admission_revocation_store.rs  config.rs  device_binding.rs  domain_store.rs  epoch_key_store.rs  expiry.rs  file_acl.rs  http.rs  identity_store.rs  lib.rs  main.rs  node.rs  p2p_identity.rs  peer_cert_store.rs  provision.rs  service.rs  telemetry.rs  win_service.rs
dds-node/tests/: admission_revocation.rs  admission_revocation_cli.rs  admit_kem_pubkey_cli.rs  cp_fido_e2e.rs  dag_persist.rs  epoch_key_release_ingest.rs  epoch_key_release_mint.rs  gossip_encrypt.rs  h12_admission.rs  h12_revocation_piggyback.rs  h6_gen_hmac_secret.rs  http_binary_e2e.rs  multinode.rs  peer_cert_cache.rs  pqc_b12_integration.rs  restrict_data_dir_acl.rs  rotate_identity_cli.rs  self_admit_cli.rs  service_tests.rs  sync_encrypt.rs
dds-store/: Cargo.toml
dds-store/src/: lib.rs  memory_backend.rs  redb_backend.rs  traits.rs
docs/: AD-drop-in-replacement-roadmap.md  AD-gap-plan.md  DDS-Admin-Guide.md  DDS-Design-Document.md  DDS-Developer-Guide.md  DDS-Implementation-Whitepaper.md  blob-distribution-proposal.md  crayonic-cp-integration-plan.md  fido2-attestation-allowlist.md  hardware-bound-admission-plan.md  observability-plan.md  pqc-phase-b-plan.md  sealed-passphrase-design.md  supply-chain-plan.md  threat-model-review.md  windows-ad-coexistence-spec.md  windows-ad-enrollment.md
docs/observability/: audit-event-schema.md  fluent-bit.conf  parsers.conf  vector.toml
docs/observability/alerts/: dds.rules.yml
docs/observability/grafana/: dds-overview.json  dds-trust-graph.json
loadtest-results/b6-validation-20260409-210025/: snapshot-0001.json  snapshot-0002.json  summary.json  summary.md
loadtest-results/soak-20260409-140730/: snapshot-0001.json  snapshot-0002.json  snapshot-0003.json  snapshot-0004.json  snapshot-0005.json  snapshot-0006.json  snapshot-0007.json  snapshot-0008.json  snapshot-0009.json  snapshot-0010.json  snapshot-0011.json
loadtest-results/validation-20260409-171032/: snapshot-0001.json  snapshot-0002.json
loadtest-results/validation-20260409-174936/: snapshot-0001.json  snapshot-0002.json
loadtest-results/validation-20260409-193017/: snapshot-0001.json  snapshot-0002.json  summary.json  summary.md
platform/linux/: README.md
platform/linux/DdsPolicyAgent/: DdsPolicyAgent.Linux.csproj  Program.cs  Worker.cs  appsettings.json
platform/linux/DdsPolicyAgent.Tests/: AppliedStateStoreTests.cs  DdsNodeHttpFactoryTests.cs  DdsPolicyAgent.Linux.Tests.csproj  EnforcerTests.cs  EnvelopeVerifierTests.cs  WorkerTests.cs
platform/linux/e2e/: ALPINE-UTM.md  DEBIAN.md  README.md  UBUNTU.md
platform/linux/packaging/: SEALED-PASSPHRASE.md
platform/linux/packaging/openrc/: dds-node  (+1 more)
platform/linux/pam_dds/: Cargo.toml
platform/linux/pam_dds/src/: lib.rs  linux.rs
platform/macos/: README.md  appsettings.e2e.sample.json
platform/macos/DdsPolicyAgent/: DdsPolicyAgent.MacOS.csproj  Program.cs  Worker.cs  appsettings.json
platform/macos/DdsPolicyAgent.Tests/: AppliedStateStoreTests.cs  BackendOperationTests.cs  DdsNodeHttpFactoryTests.cs  DdsPolicyAgent.MacOS.Tests.csproj  EnforcerTests.cs  EnvelopeVerifierTests.cs  TestDoubles.cs  WorkerTests.cs
platform/macos/e2e/: README.md  build-marker-package.sh  cleanup-machine.sh  collect-summary.sh  compare-summaries.sh  enroll-device.sh  init-machine.sh  publish-fixture.sh  smoke-test.sh  start-agent.sh  start-node.sh  write-node-config.sh
platform/macos/packaging/: Makefile  SEALED-PASSPHRASE.md  SECOND-NODE.md  appsettings.production.json  com.dds.node.plist  com.dds.policyagent.plist  dds-admit-node.sh  dds-bootstrap-domain.sh  dds-enroll-admin.sh  dds.toml.template  distribution.xml
platform/windows/DdsCredentialProvider/: DdsCredentialProvider.cs  DdsCredentialProvider.csproj  README.md
platform/windows/DdsPolicyAgent/: DdsPolicyAgent.csproj  Program.cs  Worker.cs  appsettings.json
platform/windows/DdsPolicyAgent.Tests/: AccountEnforcerTests.cs  AppliedStateStoreTests.cs  B6SoftwareStagingTests.cs  DdsNodeHttpFactoryTests.cs  DdsPolicyAgent.Tests.csproj  EnforcerStubTests.cs  EnvelopeVerifierTests.cs  PasswordPolicyEnforcerTests.cs  RegistryEnforcerTests.cs  ServiceEnforcerTests.cs  SoftwareInstallerSignatureGateTests.cs  WorkerTests.cs
platform/windows/e2e/: README.md  ad_joined_smoke.ps1  entra_only_unsupported.ps1  smoke_test.ps1
platform/windows/installer/: Build-Msi.ps1  DdsBundle.wxs
platform/windows/native/: DdsNative.sln
supply-chain/: config.toml
(+177 files in other folders)
