[workspace]
resolver = "2"
members = [
    "dds-core",
    "dds-store",
    "dds-net",
    "dds-node",
    "dds-ffi",
    "dds-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/dds"
rust-version = "1.85"

[workspace.dependencies]
# Core (no_std compatible)
ed25519-dalek = { version = "2.2", default-features = false, features = ["alloc", "rand_core"] }
sha2 = { version = "0.10", default-features = false }
base32 = "0.5"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
ciborium = "0.2"
uuid = { version = "1", default-features = false, features = ["v4", "v7"] }
heapless = { version = "0.8", features = ["serde"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }

# Storage
redb = "2"

# Networking
libp2p = { version = "0.55", features = ["gossipsub", "kad", "mdns", "noise", "tcp", "quic", "tokio", "macros", "identify"] }
tokio = { version = "1", features = ["full"] }

# Auth
webauthn-rs = "0.5"

# Serialization
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# Internal crates
dds-core = { path = "dds-core" }
dds-store = { path = "dds-store" }
dds-net = { path = "dds-net" }
