[package]
name = "dds-cli"
description = "DDS CLI tools — identity management, group operations, diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dds"
path = "src/main.rs"

[features]
default = ["pq"]
pq = ["dds-core/pq"]

[dependencies]
dds-core = { workspace = true }
dds-store = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["std"] }
rand = { workspace = true }
