[package]
name = "dds-cli"
description = "DDS CLI tools — identity management, group operations, diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dds"
path = "src/main.rs"

[features]
default = ["pq"]
pq = ["dds-core/pq"]

[dependencies]
dds-core = { workspace = true }
dds-store = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
base64 = "0.22"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
