[package]
name = "dds-cli"
description = "DDS CLI tools — identity management, group operations, diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dds"
path = "src/main.rs"

[features]
default = ["pq"]
pq = ["dds-core/pq"]

[dependencies]
dds-core = { workspace = true }
dds-store = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt", "macros", "net"] }
base64 = "0.22"
toml = "0.8"
ciborium = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
dds-domain = { path = "../dds-domain" }
dds-node = { path = "../dds-node" }
ed25519-dalek = { workspace = true, features = ["std"] }

[dev-dependencies]
tempfile = "3"
