[package]
name = "dds-core"
description = "DDS core library — identity, tokens, CRDTs, policy engine (no_std compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std", "pq"]
std = ["ed25519-dalek/std", "sha2/std", "serde/std", "uuid/std"]
pq = ["pqcrypto-mldsa", "pqcrypto-traits"]

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base32 = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
uuid = { workspace = true }
heapless = { workspace = true }
rand_core = { workspace = true }
serde_bytes = { workspace = true }
pqcrypto-mldsa = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
ciborium = { workspace = true }
dds-store = { workspace = true }
dds-net = { workspace = true }
