[package]
name = "dds-core"
description = "DDS core library — identity, tokens, CRDTs, policy engine (no_std compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std", "pq"]
std = ["ed25519-dalek/std", "p256/std", "sha2/std", "serde/std", "uuid/std"]
pq = ["pqcrypto-mldsa", "pqcrypto-traits", "ml-kem", "x25519-dalek", "hkdf"]

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base32 = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
uuid = { workspace = true }
heapless = { workspace = true }
rand_core = { workspace = true }
serde_bytes = { workspace = true }
pqcrypto-mldsa = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }
ml-kem = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
p256 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
ciborium = { workspace = true }
dds-store = { workspace = true }
dds-net = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto_verify"
harness = false

[[bench]]
name = "crdt_merge"
harness = false

[[bench]]
name = "policy_eval"
harness = false
