[package]
name = "dds-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DDS domain-specific typed documents that ride inside TokenPayload body"

[features]
default = ["pq"]
pq = ["dds-core/pq"]

[dependencies]
dds-core = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
ciborium = { workspace = true }
serde_bytes = { workspace = true }
ed25519-dalek = { workspace = true, features = ["std"] }
p256 = { workspace = true, features = ["ecdsa"] }
sha2 = { workspace = true, features = ["std"] }
base32 = { workspace = true }
rand_core = { workspace = true }
base64 = "0.22"

[dev-dependencies]
rand = { workspace = true }
