[package]
name = "dds-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DDS domain-specific typed documents that ride inside TokenPayload body"

[features]
default = ["pq"]
pq = ["dds-core/pq", "pqcrypto-mldsa", "pqcrypto-traits"]

[dependencies]
dds-core = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
ciborium = { workspace = true }
serde_bytes = { workspace = true }
ed25519-dalek = { workspace = true, features = ["std"] }
p256 = { workspace = true, features = ["ecdsa"] }
sha2 = { workspace = true, features = ["std"] }
base32 = { workspace = true }
rand_core = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }
# Z-1 Phase A — hybrid-sign AdmissionCert / AdmissionRevocation with
# Ed25519 + ML-DSA-65 (FIPS 204). Mirrors the dds-core "pq" feature.
pqcrypto-mldsa = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }
# **A-1 step-2 (security review)** — used in `verify_packed` to extract
# the leaf cert's SubjectPublicKeyInfo from `attStmt.x5c[0]` so the
# attestation `sig` can be verified under the attestation key (rather
# than blindly accepted). Already a transitive in the workspace.
x509-parser = "0.18"

[dev-dependencies]
rand = { workspace = true }
# **A-1 step-2** — synthesize a self-signed leaf cert at test time so
# the positive-path unit test for `verify_packed`'s x5c branch does not
# need a real authenticator. Already a transitive in the workspace.
rcgen = "0.13"
# **A-1 step-2** — pkcs8 feature on `p256` lets the test harness load
# rcgen-generated PKCS8 PEM into `p256::ecdsa::SigningKey` so the
# attestation `sig` matches the leaf cert's SPKI. Production code paths
# do not need PKCS8.
p256 = { workspace = true, features = ["pkcs8"] }
# Phase 2 (docs/fido2-attestation-allowlist.md) — rcgen exposes
# `CertificateParams.not_before` / `not_after` as `time::OffsetDateTime`,
# so the chain-validation expiry test needs a direct dep to construct
# explicit validity windows. Already a transitive in the workspace.
time = { version = "0.3", default-features = false, features = ["std"] }
