[package]
name = "dds-ffi"
description = "DDS FFI layer — UniFFI bindings for C#, Swift, Kotlin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["pq"]
pq = ["dds-core/pq"]

[dependencies]
dds-core = { workspace = true }
dds-store = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
