[package]
name = "dds-loadtest"
description = "Long-running multinode load/soak harness for DDS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dds-loadtest"
path = "src/main.rs"

[dependencies]
dds-core = { workspace = true }
dds-domain = { path = "../dds-domain" }
dds-store = { workspace = true }
dds-net = { workspace = true }
dds-node = { path = "../dds-node" }

tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
ciborium = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { workspace = true }
ed25519-dalek = { workspace = true, features = ["std"] }
hdrhistogram = "7"
sysinfo = "0.32"
humantime = "2"
tempfile = "3"
