[package]
name = "dds-net"
description = "DDS networking layer — libp2p gossipsub, discovery, sync protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dds-core = { workspace = true }
dds-store = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["std"] }
ciborium = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = "0.3"
