[package]
name = "dds-node"
description = "DDS full node binary — all layers combined"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "dds_node"
path = "src/lib.rs"

[[bin]]
name = "dds-node"
path = "src/main.rs"

[dependencies]
dds-core = { workspace = true }
dds-domain = { path = "../dds-domain" }
dds-store = { workspace = true }
dds-net = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
ciborium = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "0.5"
rand = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
axum = "0.7"
tower = "0.5"
hyper = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
base64 = "0.22"
ed25519-dalek = { workspace = true, features = ["std"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { workspace = true, features = ["full", "test-util"] }
ed25519-dalek = { workspace = true, features = ["std"] }
criterion = { workspace = true }

[[bench]]
name = "session_lifecycle"
harness = false
