[package]
name = "dds-node"
description = "DDS full node binary — all layers combined"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "dds_node"
path = "src/lib.rs"

[[bin]]
name = "dds-node"
path = "src/main.rs"

[features]
default = []
fido2 = ["ctap-hid-fido2"]

[dependencies]
dds-core = { workspace = true }
dds-domain = { path = "../dds-domain" }
dds-store = { workspace = true }
ctap-hid-fido2 = { version = "3.5", optional = true }
dds-net = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
ciborium = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "0.5"
rand = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
axum = "0.7"
tower = "0.5"
hyper = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { workspace = true }
uuid = { workspace = true, features = ["std", "v4"] }
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { workspace = true, features = ["std"] }
hex = "0.4"
sha2.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml_edit = "0.22"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
ed25519-dalek = { workspace = true, features = ["std"] }
p256 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "session_lifecycle"
harness = false
