[package]
name = "dds-node"
description = "DDS full node binary — all layers combined"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "dds_node"
path = "src/lib.rs"

[[bin]]
name = "dds-node"
path = "src/main.rs"

[features]
default = []
fido2 = ["ctap-hid-fido2"]

[dependencies]
dds-core = { workspace = true }
dds-domain = { path = "../dds-domain" }
dds-store = { workspace = true }
ctap-hid-fido2 = { version = "3.5", optional = true }
dds-net = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "0.5"
rand = { workspace = true }
rand_core = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
axum = "0.7"
async-trait = "0.1"
tower = "0.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "service"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
hmac = "0.12"
zeroize = { workspace = true }
uuid = { workspace = true, features = ["std", "v4"] }
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { workspace = true, features = ["std"] }
hex = "0.4"
sha2.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml_edit = "0.22"
tempfile = "3"
# observability-plan.md Phase C `dds_memory_resident_bytes` — process RSS at
# scrape time. Pinned to the same major already in the workspace
# (dds-loadtest 0.32).
sysinfo = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
# Windows Service Control Manager integration so dds-node can run as a
# proper Windows service (StartServiceCtrlDispatcher, SERVICE_RUNNING /
# SERVICE_STOPPED state transitions, Stop/Shutdown handler). Without
# this, SCM times out and orphans the process.
windows-service = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
ed25519-dalek = { workspace = true, features = ["std"] }
# Phase 2 (docs/fido2-attestation-allowlist.md) — `pkcs8` lets the
# integration tests re-import an rcgen-generated leaf private key as a
# `p256::ecdsa::SigningKey` so the synthetic attestation chain can be
# signed with the leaf cert's matching private key.
p256 = { workspace = true, features = ["pkcs8"] }
criterion = { workspace = true }
http-body-util = "0.1"
bytes = "1"
# Phase 2 (docs/fido2-attestation-allowlist.md) — synthesize attestation
# leaf certs with embedded id-fido-gen-ce-aaguid extensions so the
# service-level integration tests can exercise the attestation root
# enforcement without a real authenticator.
rcgen = "0.13"
# Phase 2 — rcgen exposes validity windows as `time::OffsetDateTime`.
time = { version = "0.3", default-features = false, features = ["std"] }

[[bench]]
name = "session_lifecycle"
harness = false
